# komorebi-for-mac

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  dependencies.json  design.html  example-configurations.html  flake.nix  formula.template.rb  index.html  installation.html  justfile  known-issues.html  komorebi.example.json  mkdocs.yml  schema.asc.json  schema.bar.json  schema.json  shell.nix
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: macos.yaml  macos.yaml.yml  nix.yaml  release.yaml
cli/: adjust-container-padding.html  adjust-workspace-padding.html  application-specific-configuration-schema.html  change-layout.html  clear-all-workspace-rules.html  clear-named-workspace-layout-rules.html  clear-named-workspace-rules.html  clear-session-float-rules.html  clear-workspace-layout-rules.html  clear-workspace-rules.html  close-workspace.html  close.html  configuration.html  container-padding.html  cross-monitor-move-behaviour.html  cycle-empty-workspace.html  cycle-focus.html  cycle-layout.html  cycle-monitor.html  cycle-move-to-monitor.html  cycle-move-to-workspace.html  cycle-move-workspace-to-monitor.html  cycle-move.html  cycle-send-to-monitor.html  cycle-send-to-workspace.html  cycle-stack-index.html  cycle-stack.html  cycle-workspace.html  data-directory.html  disable-autostart.html  display-index-preference.html  eager-focus.html  enable-autostart.html  enforce-workspace-rules.html  ensure-named-workspaces.html  ensure-workspaces.html  fetch-app-specific-configuration.html  flip-layout.html  focus-last-workspace.html  focus-monitor-at-cursor.html  (+94 more)
docs/: design.md  example-configurations.md  index.md  installation.md  known-issues.md  komorebi.bar.example.json  komorebi.example.json  skhdrc.sample
docs/cli/: adjust-container-padding.md  adjust-workspace-padding.md  animation-duration.md  animation-fps.md  animation-style.md  animation.md  application-specific-configuration-schema.md  border-colour.md  border-offset.md  border-width.md  border.md  cancel-preselect.md  change-layout.md  clear-all-workspace-rules.md  clear-named-workspace-layout-rules.md  clear-named-workspace-rules.md  clear-session-float-rules.md  clear-workspace-layout-rules.md  clear-workspace-rules.md  close-workspace.md  close.md  completions.md  configuration.md  container-padding.md  cross-monitor-move-behaviour.md  cycle-empty-workspace.md  cycle-focus.md  cycle-layout.md  cycle-monitor.md  cycle-move-to-monitor.md  cycle-move-to-workspace.md  cycle-move-workspace-to-monitor.md  cycle-move.md  cycle-send-to-monitor.md  cycle-send-to-workspace.md  cycle-stack-index.md  cycle-stack.md  cycle-workspace.md  data-directory.md  disable-autostart.md  (+107 more)
komorebi/: Cargo.toml  build.rs
komorebi-bar/: Cargo.toml
komorebi-bar/src/: bar.rs  config.rs  main.rs  render.rs
komorebi-bar/src/widgets/: applications.rs  battery.rs  cpu.rs  date.rs  keyboard.rs  komorebi.rs  komorebi_layout.rs  memory.rs  mod.rs  network.rs  storage.rs  time.rs  update.rs  widget.rs
komorebi-client/: Cargo.toml
komorebi-client/src/: lib.rs
komorebi/src/: app_kit_notification_constants.rs  application.rs  ax_event_listener.rs  container.rs  display_reconfiguration_listener.rs  input_event_listener.rs  ioreg.rs  layout.rs  lib.rs  lockable_sequence.rs  macos_api.rs  main.rs  monitor.rs  monitor_reconciliator.rs  notification_center_listener.rs  process_command.rs  process_event.rs  reaper.rs  rect.rs  ring.rs  skylight.rs  splash.rs  state.rs  static_config.rs  theme_manager.rs  window.rs  window_manager.rs  window_manager_event.rs  window_manager_event_listener.rs  workspace.rs  workspace_reconciliator.rs
komorebi/src/accessibility/: attribute_constants.rs  error.rs  mod.rs  notification_constants.rs  private.rs
komorebi/src/animation/: lerp.rs  mod.rs  prefix.rs  style.rs
komorebi/src/border_manager/: border.rs  mod.rs  ns_window.rs
komorebi/src/core/: animation.rs  arrangement.rs  asc.rs  config_generation.rs  cycle_direction.rs  default_layout.rs  direction.rs  layout.rs  mod.rs  operation_direction.rs  pathext.rs  rect.rs  rect_ext.rs
komorebi/src/core_graphics/: error.rs  mod.rs
komorebic/: Cargo.toml  build.rs
komorebic/src/: main.rs
nix/: darwin-module.nix  komorebi-bar-options.nix  komorebi-options.nix  komorebi.nix
nix/tests/: darwin-module.nix  default.nix  komorebi-bar-example.nix  komorebi-example.nix
search/: search_index.json
usage/: focusing-windows.html  focusing-workspaces.html  moving-windows-across-workspaces.html  moving-windows.html  stacking-windows.html
version/: Cargo.toml  build.rs
version/src/: lib.rs
