[workspace]

resolver = "2"
members = [
    "komorebi", "komorebi-client",
    "komorebic",
]


[workspace.dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
dirs = "6"
lazy_static = "1"
pastey = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { package = "serde_json_lenient", version = "0.2" }
sysinfo = "0.34"
thiserror = "2"