[package]
name = "komorebi-client"
version = "0.1.0"
edition = "2024"

[dependencies]
komorebi = { path = "../komorebi", default-features = false }
komorebi-themes = { git = "https://github.com/LGUG2Z/komorebi", version = "0.1.38"}
serde_json = { workspace = true }

[features]
default = ["schemars"]
schemars = ["komorebi/default"]
