[package]
name = "komorebi"
version = "0.1.0"
description = "A tiling window manager for macOS"
edition = "2024"

[dependencies]
komorebi-themes = { git = "https://github.com/LGUG2Z/komorebi", version = "0.1.38"}
quickxml_to_serde = { git = "https://github.com/LGUG2Z/quickxml_to_serde.git", version = "0.6.1" }

block2 = "0.3"
clap = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
ctrlc = { version = "3", features = ["termination"] }
dirs = { workspace = true }
dispatch2 = "0.3"
hotwatch = { workspace = true }
lazy_static = { workspace = true }
nanoid = "0.4"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-application-services = "0.3"
objc2-core-foundation = { version = "0.3", features = ["CFDictionary", "CFString"] }
objc2-core-graphics = { version = "0.3", features = ["CGWindow", "alloc"] }
objc2-core-services = "0.3"
objc2-core-video = "0.3"
objc2-foundation = "0.3"
objc2-quartz-core = "0.3"
parking_lot = { workspace = true }
pastey = { workspace = true }
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1"
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { version = "3", features = ["schemars_0_8"] }
shadow-rs = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[features]
default = ["schemars"]
deadlock_detection = ["parking_lot/deadlock_detection"]
schemars = ["dep:schemars"]
