[package]
name = "komorebi"
version = "0.1.0"
description = "A tiling window manager for macOS"
edition = "2024"

[dependencies]
komorebi-themes = { workspace = true }
quickxml_to_serde = { git = "https://github.com/LGUG2Z/quickxml_to_serde.git", version = "0.6.1" }
version = { path = "../version" }

base64 = "0.22"
block2 = "0.6"
clap = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-utils = { workspace = true }
ctrlc = { version = "3", features = ["termination"] }
dirs = { workspace = true }
dispatch2 = "0.3"
ed25519-dalek = "2"
hotwatch = { workspace = true }
lazy_static = { workspace = true }
nanoid = "0.4"
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-application-services = "0.3"
objc2-core-foundation = { version = "0.3", features = [
  "CFDictionary",
  "CFString",
] }
objc2-core-graphics = { version = "0.3", features = ["CGWindow", "alloc"] }
objc2-core-services = "0.3"
objc2-core-video = "0.3"
objc2-foundation = "0.3"
objc2-quartz-core = "0.3"
parking_lot = { workspace = true }
pastey = { workspace = true }
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { version = "3", features = ["schemars_0_8"] }
shadow-rs = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[features]
default = ["schemars"]
deadlock_detection = ["parking_lot/deadlock_detection"]
schemars = ["dep:schemars"]
