[package]
name = "komorebic"
version = "0.1.0"
description = "The command-line interface for Komorebi, a tiling window manager for macOS"
edition = "2024"

[dependencies]
komorebi-client = { path = "../komorebi-client", default-features = false }

clap = { workspace = true }
chrono = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
fs-tail = "0.1"
lazy_static = { workspace = true }
pastey = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
shadow-rs = { workspace = true }
sysinfo = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
shadow-rs = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }
