[package]
name = "komorebic"
version = "0.1.0"
description = "The command-line interface for Komorebi, a tiling window manager for macOS"
edition = "2024"

[dependencies]
komorebi-client = { path = "../komorebi-client", default-features = false }

clap = { workspace = true }
clap_complete = "4"
chrono = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
fs-tail = "0.1"
lazy_static = { workspace = true }
pastey = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
schemars = { workspace = true, optional = true }
serde_json = { workspace = true }
shadow-rs = { workspace = true }
sysinfo = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
shadow-rs = { workspace = true }

[features]
default = ["schemars"]
schemars = ["dep:schemars", "komorebi-client/default"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(FALSE)'] }
